--- a/config.json
+++ b/config.json
@@ -3,17 +3,18 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "MnistModel",
+        "type": "CIFAR10Model",
         "args": {}
     },
     "data_loader": {
-        "type": "MnistDataLoader",
+        "type": "CIFAR10DataLoader",
         "args":{
             "data_dir": "data/",
             "batch_size": 128,
             "shuffle": true,
             "validation_split": 0.1,
-            "num_workers": 2
+            "num_workers": 2,
+            "trsfm": false
         }
     },
     "optimizer": {
@@ -24,7 +25,7 @@
             "amsgrad": true
         }
     },
-    "loss": "nll_loss",
+    "loss": "cross_entropy_loss",
     "metrics": [
         "accuracy", "top_k_acc"
     ],
