--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
-    "name": "Mnist_LeNet",
+    "name": "Test",
     "n_gpu": 1,
 
     "arch": {
-        "type": "CIFAR10Model",
+        "type": "MaskModel",
         "args": {}
     },
     "data_loader": {
-        "type": "CIFAR10DataLoader",
+        "type": "MaskDataLoader",
         "args":{
-            "data_dir": "data/",
+            "data_dir": "../input/data",
             "batch_size": 128,
             "shuffle": true,
             "validation_split": 0.1,
-            "num_workers": 2,
+            "num_workers": 1,
             "trsfm": false
         }
     },
