--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "name": "Test",
+    "name": "PretrainResNet18",
     "n_gpu": 1,
 
     "arch": {
-        "type": "MaskModel",
+        "type": "PretrainModelTV",
         "args": {}
     },
     "data_loader": {
