--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "PretrainModelTV",
+        "type": "EfficientNet_b0",
         "args": {}
     },
     "data_loader": {
@@ -38,7 +38,7 @@
         }
     },
     "trainer": {
-        "epochs": 30,
+        "epochs": 10,
 
         "save_dir": "saved/",
         "save_period": 1,
