--- a/config.json
+++ b/config.json
@@ -1,11 +1,19 @@
 {
-    "name": "PretrainResNet18_Test",
+    "name": "ResNet18Albu",
     "n_gpu": 1,
 
     "arch": {
-        "type": "EfficientNet_b0",
+        "type": "PretrainModelTV",
         "args": {}
     },
+
+    "transforms_select": {
+        "type": "transforms_select",
+        "args": {
+            "method": "DEFAULT"
+        }
+    },
+
     "data_loader": {
         "type": "MaskDataLoader",
         "args":{
@@ -14,7 +22,6 @@
             "shuffle": true,
             "validation_split": 0.1,
             "num_workers": 1,
-            "trsfm": false,
             "submit": false
         }
     },
