--- a/config_submit.json
+++ b/config_submit.json
@@ -3,7 +3,7 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "PretrainModelTV",
+        "type": "EfficientNet_b0",
         "args": {}
     },
     "data_loader": {
