--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
         }
     },
     "metrics": [
-        "accuracy", "top_k_acc"
+        "accuracy", "top_k_acc", "f1"
     ],
     "lr_scheduler": {
         "type": "StepLR",
