--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "PretrainModelTimm_ViT",
+    "name": "PretrainModelTimm_ViT_base",
     "n_gpu": 1,
 
     "arch": {
@@ -10,7 +10,7 @@
     "transforms_select": {
         "type": "transforms_select",
         "args": {
-            "method": "DEFAULT"
+            "method": "TRNS004"
         }
     },
 
@@ -18,10 +18,10 @@
         "type": "MaskDataLoader",
         "args":{
             "data_dir": "../input/data",
-            "batch_size": 12,
+            "batch_size": 32,
             "shuffle": true,
             "validation_split": 0.1,
-            "num_workers": 2,
+            "num_workers": 1,
             "submit": false
         }
     },
@@ -57,8 +57,7 @@
         "verbosity": 2,
         
         "monitor": "min val_loss",
-        "early_stop": 10,
-
+        "early_stop": 5,
         "tensorboard": true
     }
 }
