--- a/config_submit.json
+++ b/config_submit.json
@@ -1,5 +1,5 @@
 {
-    "name": "PretrainModelTimm_ViT",
+    "name": "PretrainModelTimm_ViT_base",
     "n_gpu": 1,
 
     "arch": {
@@ -10,7 +10,7 @@
     "transforms_select": {
         "type": "transforms_select",
         "args": {
-            "method": "DEFAULT"
+            "method": "TRNS004"
         }
     },
     
@@ -18,10 +18,10 @@
         "type": "MaskDataLoader",
         "args":{
             "data_dir": "../input/data",
-            "batch_size": 12,
+            "batch_size": 32,
             "shuffle": false,
             "validation_split": 0.0,
-            "num_workers": 2,
+            "num_workers": 1,
             "submit": true
         }
     },
