--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "name": "PretrainModelTimmEcaNFNet10_Baseline",
+    "name": "PretrainedDenseNet_161",
     "n_gpu": 1,
 
     "arch": {
-        "type": "PretrainModelTimmEcaNFNet10",
+        "type": "PretrainedDenseNet_161",
         "args": {}
     },
 
@@ -18,10 +18,10 @@
         "type": "MaskDataLoader",
         "args":{
             "data_dir": "../input/data",
-            "batch_size": 64,
+            "batch_size": 32,
             "shuffle": true,
             "validation_split": 0.1,
-            "num_workers": 2,
+            "num_workers": 1,
             "submit": false
         }
     },
