[ADD] Submit 코드 구현

--- a/config_sub.json
+++ b/config_sub.json
@@ -8,8 +8,8 @@
     "transforms_select": {
         "type": "transforms_select",
         "args": {
-            "method": "ENN_test",
-            "default": "ENN_test"
+            "method": "VIT_TRNS004",
+            "default": "ENN_TEST"
         }
     },
     "data_loader": {
